# sql-requests-builder

./: README.md  sql.h
test/: CMakeLists.txt  delete_model_test.cpp  insert_model_test.cpp  select_model_test.cpp  test.cpp  update_model_test.cpp
